[package]
name = "memtrack"
version = "0.1.0"
authors = ["George Burgess IV <gbiv@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 2
panic = "abort"

[dependencies]
chrono = "0.4"
clap = "2.33"
failure = "0.1"
errorz = { path = "../errorz" }
memchr = "2.2"
libc = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.3"
tokio = { version = "0.2", features = ["process", "time"] }

#rand = "0.7"
#rmp-serde = "0.14"
#rust-crypto = "0.2.36"
#twoway = "0.2"
